fixed collapsing margins

--- a/src/style.css
+++ b/src/style.css
@@ -19,9 +19,10 @@
 }
 
 body {
+    padding: 1px;
     margin: 0px;
-    width: 100vw;
-    height: 100vh;
+    width: 99vw;
+    height: 99vh;
     background: linear-gradient(to bottom, var(--background-alt1), var(--background));
 }
 
